# app

./: .gitignore  .prettierrc.json  CHANGELOG.md  DEVELOPMENT.md  NOTES.md  README.md  astro.config.mjs  generate-docs.js  generate-docs.ts  package.json  version.mjs
.github/workflows/: main.yml
@apicize/lib-typescript/: eslint.config.mjs  package.json
@apicize/toolkit/: eslint.config.mjs  package.json  tsconfig.json  vitest.config.js  vitest.config.ts
app/: eslint.config.mjs  package.json  tsconfig.json  webpack.config.development.js  webpack.config.production.js
app/src/: index.html  page.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: migrated.json
app/src-tauri/help/: about.md  acknowledgements.md  authoring-tests.md  contents.json  home.md  index.md  logs.md  parameter-storage.md  running-tests.md  workspace.md
app/src-tauri/help/authorizations/: api-key.md  basic.md  oauth2-client.md  oauth2-pkce.md
app/src-tauri/help/demo/: demo.apicize
app/src-tauri/help/demo/data/: demo-test.csv
app/src-tauri/help/groups/: info.md  parameters.md  setup.md
app/src-tauri/help/requests/: body.md  headers.md  info.md  parameters.md  query.md  setup.md  test.md
app/src-tauri/help/settings/: app-settings.md  defaults.md  lock.md
app/src-tauri/help/tests/: authoring-tests.md  integration.md  running-tests.md  viewing-results.md
app/src-tauri/help/workspace/: authorizations.md  certificates.md  data-sets.md  defaults.md  groups.md  proxies.md  requests.md  scenarios.md
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: clipboard.rs  dragdrop.rs  error.rs  main.rs  navigation.rs  pkce.rs  sessions.rs  settings.rs  trace.rs  workspaces.rs
app/src-tauri/src/results/: execution_result.rs  execution_result_detail.rs
app/src-tauri/src/updates/: authorization_update.rs  certificate_update.rs  data_set_update.rs  defaults_update.rs  mod.rs  proxy_update.rs  request_group_update.rs  request_update.rs  scenario_update.rs
docs/: about.html  acknowledgements.html  authoring-tests.html  contents.html  home.html  index.html  logs.html  parameter-storage.html  running-tests.html  settings.html  styles.css  workspace.html
docs/authorization/: api-key.html  basic.html  oauth2-client.html  oauth2-pkce.html
docs/authorizations/: api-key.html  basic.html  oauth2-client.html  oauth2-pkce.html
docs/groups/: info.html  (+2 more)
utilities/: generate-docs.ts  tsconfig.json  validate-help-icons.ts  validate-help.ts
(+225 files in other folders)
