[package]
name = "apicize"
version = "0.31.0"
description = "Apicize HTTP call testing application"
authors = ["Jason Terando"]
license = "MIT"
repository = ""
default-run = "apicize"
edition = "2024"
rust-version = "1.91"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
serde_json = "^1.0"
serde = { version = "^1.0", features = ["derive"] }
apicize_lib = { version = "~0.32.0", features = ["editing"] }
# apicize_lib = { path = "../../../lib-rust", features = ["editing"] }
tauri = { version = "^2", features = ["image-png", "unstable"] }
tokio-util = "^0.7.11"
tauri-plugin-fs = "^2"
# tauri-plugin-clipboard-manager = "^2.1.0"
tauri-plugin-dialog = "^2"
tauri-plugin-window-state = "^2"
tauri-plugin-clipboard = { git = "https://github.com/jasonterando/tauri-plugin-clipboard/", branch = "v2-yarn-friendly" }
env_logger = "^0.11.9"
tauri-plugin-log = "^2"
tauri-plugin-single-instance = "^2"
actix-web = "^4.9.0"
parking_lot = "^0.12.3"
dirs = "^6.0.0"
async-trait = "^0.1.86"
regex = "^1.11.1"
log = "^0.4.25"
chrono = "^0.4.39"
tauri-plugin-os = "^2"
rustc-hash = "^2.0.0"
thiserror = "^2.0.12"
uuid = "^1.16.0"
tokio = "^1.44.2"
serde_repr = "^0.1.20"
tauri-plugin-opener = "^2"
serde-xml-rs = "^0.8.1"
serde_xml = "^0.9.1"
indexmap = {version = "^2.11.4", features = ["serde"] }
serde_urlencoded = "0.7.1"
file_type = "0.8.11"
pathdiff = "0.2.3"
serde_with = { version = "^3.16.1", features = ["base64"] }
csv = "1.4.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size
strip = "debuginfo" # Keep debug symbols (required for Tauri bundler)
incremental = false
overflow-checks = false

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
